Fix wrapping adds extra spacing when it's empty

--- a/client/web/src/search/results/components/new-search-content/NewSearchContent.module.scss
+++ b/client/web/src/search/results/components/new-search-content/NewSearchContent.module.scss
@@ -162,6 +162,10 @@
 
     &-padding-wrapper {
         padding: 1rem;
+
+        &:empty {
+            display: none;
+        }
     }
 }
 
